--- a/src/components/appWrapper.scss
+++ b/src/components/appWrapper.scss
@@ -1,3 +1,9 @@
-*{
-    background-color: #089083;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@500&display=swap');
+
+
+body {
+    background-color: #98C9DB;
+    font-family: 'Open Sans', sans-serif;
+
 }
