feat: result navback styles

--- a/src/frontend/components/Result/result.scss
+++ b/src/frontend/components/Result/result.scss
@@ -1,71 +1,67 @@
-
 .card {
-    box-sizing: border-box;
-    background-color: white;
-    padding: 1rem;
-    margin: 1rem;
-    border-radius: 10px;
-    height: 300px;
-    font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
+  background-color: white;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 10px;
+  height: 300px;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.upper-item{
-    text-align: center;
-    &.airline{
-        font-family: 'Domine', serif;
-        color: #F3B305;
-
-    }
+.upper-item {
+  text-align: center;
+  &.airline {
+    font-family: 'Domine', serif;
+    color: #f3b305;
+  }
 }
 .upper,
 .middle,
 .bottom {
-    display: flex;
-    justify-content: space-between;
-    height: 33%;
+  display: flex;
+  justify-content: space-between;
+  height: 33%;
 }
 
 .middle {
-    border-bottom: 2px dashed gray;
-    text-align: center;
+  border-bottom: 2px dashed gray;
+  text-align: center;
 }
 
-.bottom{
-    padding-top: 1rem;
+.bottom {
+  padding-top: 1rem;
 }
-
 
 .price {
-    font-weight: bolder;
-    font-size: 2rem;
-    color: #FF715D;
+  font-weight: bolder;
+  font-size: 2rem;
+  color: #ff715d;
 }
 
 .price-text {
-    color:gray;
-    float: left;
+  color: gray;
+  float: left;
 }
 
 .dot {
-    transform: translateX(-30px) translateY(-15px);
-    height: 25px;
-    width: 25px;
-    background-color: #98CADB;
-    border-radius: 50%;
-    display: inline-block;
-    position: relative;
-    &.right{
-        right: -100.5%; 
-
-
-    }
+  transform: translateX(-30px) translateY(-15px);
+  height: 25px;
+  width: 25px;
+  background-color: #98cadb;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  &.right {
+    right: -100.5%;
   }
-  
-  
+}
 
-
-    
-
-
-
-
+.navBack {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 5px;
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  margin: 1rem;
+}
