feat: add error handling for api call

--- a/src/frontend/components/Result/result.scss
+++ b/src/frontend/components/Result/result.scss
@@ -8,6 +8,15 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+.error {
+  text-align: center;
+}
+
+.error-message {
+  padding: 1rem;
+  color: red;
+}
+
 .upper-item {
   text-align: center;
   &.airline {
