feat: improve styles

--- a/src/frontend/components/Result/result.scss
+++ b/src/frontend/components/Result/result.scss
@@ -6,6 +6,7 @@
   border-radius: 10px;
   height: 300px;
   font-family: 'Open Sans', sans-serif;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .error {
