--- a/src/frontend/components/Search/styles/search.scss
+++ b/src/frontend/components/Search/styles/search.scss
@@ -5,7 +5,7 @@
     border: 2px;
     border-radius: 25px 25px;
     margin: auto;
-    
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .icons {
